RESOLVED FIXED145864
WKWebsiteDataStore should handle removing plug-in data for individual records
https://bugs.webkit.org/show_bug.cgi?id=145864
Summary WKWebsiteDataStore should handle removing plug-in data for individual records
Anders Carlsson
Reported 2015-06-10 18:28:30 PDT
WKWebsiteDataStore should handle removing plug-in data for individual records
Attachments
Patch (14.91 KB, patch)
2015-06-10 18:28 PDT, Anders Carlsson
bdakin: review+
Anders Carlsson
Comment 1 2015-06-10 18:28:49 PDT
WebKit Commit Bot
Comment 2 2015-06-10 18:31:30 PDT
Attachment 254698 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/Plugins/PluginProcessProxy.cpp:139: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/UIProcess/Plugins/PluginProcessManager.cpp:112: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/UIProcess/Plugins/PluginProcessProxy.h:84: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/UIProcess/Plugins/PluginProcessProxy.h:185: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/UIProcess/Plugins/PluginProcessManager.h:67: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 5 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 3 2015-06-10 19:34:41 PDT
Note You need to log in before you can comment on or make changes to this bug.