WKWebsiteDataStore should handle removing plug-in data for individual records https://bugs.webkit.org/show_bug.cgi?id=145864

Reviewed by Beth Dakin.

* PluginProcess/PluginProcess.cpp:
(WebKit::PluginProcess::deleteWebsiteDataForHostNames):
* PluginProcess/PluginProcess.h:
* PluginProcess/PluginProcess.messages.in:
* UIProcess/Plugins/PluginProcessManager.cpp:
(WebKit::PluginProcessManager::deleteWebsiteDataForHostNames):
* UIProcess/Plugins/PluginProcessManager.h:
* UIProcess/Plugins/PluginProcessProxy.cpp:
(WebKit::PluginProcessProxy::deleteWebsiteDataForHostNames):
(WebKit::PluginProcessProxy::pluginProcessCrashedOrFailedToLaunch):
(WebKit::PluginProcessProxy::didFinishLaunching):
(WebKit::PluginProcessProxy::didDeleteWebsiteDataForHostNames):
* UIProcess/Plugins/PluginProcessProxy.h:
* UIProcess/Plugins/PluginProcessProxy.messages.in:
* UIProcess/WebsiteData/WebsiteDataStore.cpp:
(WebKit::WebsiteDataStore::removeData):

Canonical link: https://commits.webkit.org/163914@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185445 268f45cc-cd09-0410-ab3c-d52691b4dbfc