Source/WebKit2/PluginProcess/PluginProcess.h
@@ -102,6 +102,7 @@ private:
     void getSitesWithData(uint64_t callbackID);
     void clearSiteData(const Vector<String>& sites, uint64_t flags, uint64_t maxAgeInSeconds, uint64_t callbackID);
     void deleteWebsiteData(std::chrono::system_clock::time_point modifiedSince, uint64_t callbackID);
+    void deleteWebsiteDataForHostNames(const Vector<String>& hostNames, uint64_t callbackID);
 
     // AudioHardwareListenerClient
     virtual void audioHardwareDidBecomeActive() override;
